tests/invalid/main_guard_wrong_left_name/main.py
def run_case() -> None:
    print("x")


if __package__ == "__main__":
    run_case()
